--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@popperjs/core": "^2.10.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.0",
     "ckeditor4": "^4.16.2",
+    "daveutils": "^0.4.63",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-ws": "^5.0.2",
     "got": "^11.8.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "opmltojs": "^0.4.11"
   }
 }
