--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-session": "^1.17.2",
     "got": "^11.8.2",
     "mysql": "^2.18.1",
-    "pls": "^0.1.3"
+    "pls": "^0.1.3",
+    "puppeteer": "^11.0.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
