--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "star": "nodemon --watch  app.js",
+    "node-sass": "node-sass scss/ -o publico/css --source-map-embed true",
+    "watch:node-sass": "nodemon -e scss -x \"npm run node-sass\"",
+    "dev": "concurrently --kill-others \"npm run star\" \"npm run watch:node-sass\""
   },
   "author": "Olver Edgar Montalvo Sabino",
   "license": "ISC",
@@ -20,8 +24,10 @@
     "puppeteer": "^11.0.0"
   },
   "devDependencies": {
+    "concurrently": "^6.4.0",
     "dotenv": "^10.0.0",
     "morgan": "^1.10.0",
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.15"
   }
 }
