--- a/package.json
+++ b/package.json
@@ -6,22 +6,28 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "star": "nodemon --watch  app.js",
+    "tailwind":"postcss css/tailwind-base.css -o publico/css/tailwind.css",
+    "watch:tailwind": "nodemon -x npm run tailwind -w css/tailwind-base.css -w tailwind.config.js -w publico/css/tailwind.css",
     "node-sass": "node-sass scss/ -o publico/css --source-map-embed true",
     "watch:node-sass": "nodemon -e scss -x \"npm run node-sass\"",
-    "dev": "concurrently --kill-others \"npm run star\" \"npm run watch:node-sass\""
+    "dev": "concurrently --kill-others \"npm run star\" \"npm run watch:node-sass\" \"npm run watch:tailwind\""
   },
   "author": "Olver Edgar Montalvo Sabino",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.0",
     "bcryptjs": "^2.4.3",
     "ckeditor4": "^4.16.2",
+    "daisyui": "^1.16.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "got": "^11.8.2",
     "mysql": "^2.18.1",
     "pls": "^0.1.3",
-    "puppeteer": "^11.0.0"
+    "postcss-cli": "^9.1.0",
+    "puppeteer": "^11.0.0",
+    "tailwindcss": "^3.0.1"
   },
   "devDependencies": {
     "concurrently": "^6.4.0",
